--- a/views/base.pug
+++ b/views/base.pug
@@ -12,31 +12,10 @@ html(lang='en')
 
   body
     // HEADER
-    header.header
-      nav.nav.nav--tours
-        a.nav__el(href='#') All tours
-      .header__logo
-        img(src='img/logo-white.png' alt-'Natours logo')
-      nav.nav.nav--user 
-        //- a.nav__el(href='#') My bookings 
-        //- a.nav__el(href='#')
-        //-   img.nav__user-img(src='img/user.jpg' alt='User photo')
-        //-   span Jonas
-        button.nav__el Login in
-        button.nav__el.nav__el--cta Sign up
-
-    // Content
-    main.main
-      h1= tour
+    include _header
+  // Content
+  main.main
+    h1= tour
 
     // Footer
-    footer.footer 
-      .footer__logo 
-        img(src='img/logo-green.png' alt='Natour logo')
-      ul.footer__nav 
-        li: a(href='#') About us
-        li: a(href='#') Download apps
-        li: a(href='#') Become a guide
-        li: a(href='#') Carrers
-        li: a(href='#') Contact
-      p.footer__copyright &copy; by Jonas Schmedtmann. Feel free to use this project for your own purposes, Except producing your own courses or tutorial.
+    include _footer
