--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1323,3 +1323,27 @@ body {
   -webkit-transform: translateY(-2px);
   transform: translateY(-2px);
 }
+
+/* add scrollbar style */
+.reviews::-webkit-scrollbar {
+  width: 1rem;
+  background: transparent;
+}
+
+.reviews::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 4px rgba(0, 0, 0, 0.5);
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+}
+
+.reviews::-webkit-scrollbar-thumb {
+  background: linear-gradient(to right bottom, #28b487, #7dd56f);
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+}
