--- a/views/tour.pug
+++ b/views/tour.pug
@@ -1,5 +1,12 @@
 extends base
 include _reviewCard
+
+//- Whatever we will write here will be appended to the contents that is already in the block
+block append head
+  script(defer src='https://api.mapbox.com/mapbox-gl-js/v2.6.0/mapbox-gl.js')
+  link(defer href='https://api.mapbox.com/mapbox-gl-js/v2.6.0/mapbox-gl.css' rel='stylesheet')
+  script(defer src='/js/mapbox.js')   
+
     
 mixin overviewBox(label, text, icon)
   .overview-box__detail
@@ -67,7 +74,7 @@ block content
         img.picture-box__img(src=`/img/tours/${img}`, alt=`${i + 1} `, class=`.picture-box__img--${i + 1}`)
 
   section.section-map
-    #map
+    #map(data-locations=`${JSON.stringify(tour.locations)}`)
 
   section.section-reviews
     .reviews
