--- a/views/account.pug
+++ b/views/account.pug
@@ -1,18 +1,18 @@
 extends base
 
-mixin navItem(link , text , icon , active)
+mixin navItem(link , text , icon, active)
   li(class=`${active ? 'side-nav--active' : ''}`)
     a(href=`${link}`)
       svg
         use(xlink:href=`img/icons.svg#icon-${icon}`)
-        | #{text}
+      | #{text}
 
 block content 
   main.main
     .user-view
       nav.user-view__menu
         ul.side-nav
-          +navItem('#', 'Settings', true)
+          +navItem('#', 'Settings', 'settings', true)
           +navItem('#', 'My bookings', 'briefcase')
           +navItem('#', 'My reviews', 'star')
           +navItem('#', 'Billing', 'credit-card')
@@ -21,7 +21,6 @@ block content
           .admin-nav
             h5.admin-nav__heading Admin
             ul.side-nav
-              +navItem('#', 'Manage tours', 'map')
               +navItem('#', 'Manage users', 'users')
               +navItem('#', 'Manage reviews', 'star')
               +navItem('#', 'Manage bookings', 'briefcase')
